examples/failing/UIntNegative.purs
-- @shouldFailWith NoInstanceFound

module Main where

import Prelude (negate)

n :: UInt
n = -1u
